--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -53,7 +53,7 @@ jobs:
         if: ${{ inputs.target == 'LinuxArm64' && steps.cache.outputs.cache-hit != 'true' }}
         run: |
           sudo apt-get update
-          sudo apt-get install zlib1g-dev libcurl4-openssl-dev clang libc++-dev
+          sudo apt-get install zlib1g-dev libcurl4-openssl-dev clang-16 libc++-16-dev libc++abi-16-dev
 
       - uses: actions/setup-java@v3
         if: ${{ inputs.target == 'Android' }}
