--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -200,7 +200,7 @@ jobs:
       - name: Setup C++ runtime
         run: docker exec --user root unreal bash -c '
           apt-get update ;
-          apt-get install -y libc++-dev '
+          apt-get install -y libstdc++-10-dev'
 
       - name: Download package
         uses: actions/download-artifact@v4
