--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -47,14 +47,12 @@ jobs:
         if: ${{ inputs.target == 'Linux' && steps.cache.outputs.cache-hit != 'true' }}
         run: |
           sudo apt-get update
+          sudo add-apt-repository ppa:ubuntu-toolchain-r/test
           wget https://apt.llvm.org/llvm.sh
           chmod +x llvm.sh
           sudo ./llvm.sh 13
           sudo ./llvm.sh 16
-          sudo apt-get install libc++-16-dev libc++abi-16-dev libstdc++-10-dev
-          sudo apt-get install zlib1g-dev libcurl4-openssl-dev
-          sudo add-apt-repository ppa:ubuntu-toolchain-r/test
-          sudo apt-get install gcc-11 g++-11
+          sudo apt-get install libc++-16-dev libc++abi-16-dev libstdc++-10-dev zlib1g-dev libcurl4-openssl-dev gcc-11 g++-11
 
       - uses: actions/setup-java@v3
         if: ${{ inputs.target == 'Android' }}
