--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -200,7 +200,7 @@ jobs:
       - name: Setup C++ runtime
         run: docker exec --user root unreal bash -c '
           apt-get update ;
-          add-apt-repository ppa:ubuntu-toolchain-r/test
+          add-apt-repository ppa:ubuntu-toolchain-r/test ;
           apt-get install -y libstdc++-10-dev'
 
       - name: Download package
