--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -183,16 +183,21 @@ jobs:
           docker exec --user root unreal bash -c "
             mkdir -p /etc/pki/tls/certs ;
             cp /etc/ssl/certs/ca-certificates.crt /etc/pki/tls/certs/ca-bundle.crt "
-          # Chown some paths to the GH user to make UE5 work properly. We can't just chown the whole UnrealEngine or
-          # docker would implicitly have to copy it to the container and we would run out of space on the GH runner.
-          if [[ "${{  matrix.unreal }}" == "4.27" ]]; then
-            docker exec --user root unreal bash -c "
-              chown -R $uid /home/ue4/UnrealEngine/Engine/Binaries/ThirdParty/Mono/Linux ;
-              chown -R $uid /home/ue4/UnrealEngine/Engine/Programs/UnrealPak/Saved "
-          else
-            docker exec --user root unreal bash -c "
-              chown -R $uid /home/ue4/UnrealEngine/Engine/Binaries/ThirdParty/Mono/Linux ;
-              chown -R $uid /home/ue4/UnrealEngine/Engine/Binaries/ThirdParty/DotNet "
+
+      # Chown some paths to the GH user to make UE5 work properly. We can't just chown the whole UnrealEngine or
+      # docker would implicitly have to copy it to the container and we would run out of space on the GH runner.
+      - name: Chown Docker container paths (UE4)
+        if: ${{ matrix.unreal == '4.27'}}
+        run: |
+          docker exec --user root unreal bash -c "
+            chown -R $uid /home/ue4/UnrealEngine/Engine/Binaries/ThirdParty/Mono/Linux ;
+            chown -R $uid /home/ue4/UnrealEngine/Engine/Programs/UnrealPak/Saved "
+      - name: Chown Docker container paths (UE5)
+        if: ${{ matrix.unreal != '4.27'}}
+        run: |
+          docker exec --user root unreal bash -c "
+            chown -R $uid /home/ue4/UnrealEngine/Engine/Binaries/ThirdParty/Mono/Linux ;
+            chown -R $uid /home/ue4/UnrealEngine/Engine/Binaries/ThirdParty/DotNet "
 
       - name: Setup C++ runtime
         run: docker exec --user root unreal bash -c '
