Test `libstdc++6` in docker container

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -197,7 +197,7 @@ jobs:
         run: docker exec --user root unreal bash -c '
           apt-get update ;
           add-apt-repository ppa:ubuntu-toolchain-r/test ;
-          apt-get install -y libstdc++-10-dev'
+          apt-get install -y libstdc++6'
 
       - name: Download package
         uses: actions/download-artifact@v4
