Try running arm64 native sdk build inside docke container with ubuntu 20.04
Fix git

Fix sudo

Add arm64-specific git step

Try set workdir

Test

Test

Set user

Test

Test

Git init

Test

Test

Test

Test

Test

wget

yes

cmake

Update build script for linux arm64

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
     with:
       target: LinuxArm64
       runsOn: ubuntu-latest-4-cores-arm64
+      container: arm64v8/ubuntu:20.04
 
   windows-crashpad-sdk:
     uses: ./.github/workflows/sdk.yml
