--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -7,6 +7,9 @@ on:
       target:
         required: true
         type: string
+      container:
+        required: false
+        type: string
 
 jobs:
   build:
@@ -18,6 +21,13 @@ jobs:
       run:
         shell: bash
     steps:
+      - name: Configure env for Linux arm64 runner
+        if: ${{ inputs.target == 'LinuxArm64' }}
+        run: |
+          apt-get update
+          apt-get -y install sudo wget cmake software-properties-common git
+          git config --global --add safe.directory $(pwd)
+
       - uses: actions/checkout@v3
 
       - name: Select submodule
