Add LinuxArm64 support for UE plugin (#672)
* Test sentry-native build for aarch64

* Add missing config

* Add missing platform

* Test

Change file mode

Test

Test

Test

Test

Test

Test

Test

Test

Test

Test

Test

Test

Tezt

Test

Test

Test

Test

Test

Test

Test

Test

Test

Test

Test

Test

Test

Test

Test flags

Test

Test

Test

* Update gitignore

* Update snapshot

* Add arm64 runner

* Update sdk build

* Add LinuxArm64 support platform

* Change deps

Change clang ver

Test

Test

Test

Test

Add abi

clang-16

* Try atomic

* std

* Revert

* Fix missing artifact

* Update changelog

* Fix platform target for UE4

* Fix platform name for UE 4.27

* Try running arm64 native sdk build inside docke container with ubuntu 20.04

Fix git

Fix sudo

Add arm64-specific git step

Try set workdir

Test

Test

Set user

Test

Test

Git init

Test

Test

Test

Test

Test

wget

yes

cmake

Update build script for linux arm64

* Try build with `-mno-outline-atomics`

* Test

* Test

* Clean up build flags

* Try revert docker stuff

* Put docker back and clean up

* DIsable crash reporter in packaged sample build

* Test

* Try package sample for LinuxArm64

* Revert

* Add LinuxArm64 debug symbol upload

* Fix sym upload for arm64 on Windows

* Update readme

* Fix workflow name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,13 @@ jobs:
       # See discussion in https://github.com/getsentry/sentry-unreal/pull/173
       runsOn: ubuntu-20.04
 
+  linux-arm64-sdk:
+    uses: ./.github/workflows/sdk-build.yml
+    with:
+      target: LinuxArm64
+      runsOn: ubuntu-latest-4-cores-arm64
+      container: arm64v8/ubuntu:20.04
+
   windows-crashpad-sdk:
     uses: ./.github/workflows/sdk-build.yml
     with:
@@ -42,7 +49,7 @@ jobs:
       runsOn: windows-2019
 
   build:
-    needs: [android-sdk, ios-sdk, macos-sdk, linux-sdk, windows-crashpad-sdk, windows-breakpad-sdk]
+    needs: [android-sdk, ios-sdk, macos-sdk, linux-sdk, linux-arm64-sdk, windows-crashpad-sdk, windows-breakpad-sdk]
     name: Package
     runs-on: ubuntu-latest
     steps:
@@ -77,6 +84,11 @@ jobs:
         with:
           name: Linux-sdk
           path: plugin-dev/Source/ThirdParty/Linux
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: LinuxArm64-sdk
+          path: plugin-dev/Source/ThirdParty/LinuxArm64
 
       - uses: actions/download-artifact@v4
         with:
@@ -248,7 +260,7 @@ jobs:
           name: UE ${{ matrix.unreal }} ${{ matrix.app }} test report
           path: |
             checkout/${{ matrix.app }}/Saved/Automation
-  
+
       - name: Collect ${{ matrix.app }} build info
         if: contains(fromJson('["success", "failure"]'), steps.run-tests.outcome)
         uses: actions/upload-artifact@v4
