--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -13,7 +13,7 @@ jobs:
   native:
     uses: getsentry/github-workflows/.github/workflows/updater.yml@v2
     with:
-      path: modules/sentry-native
+      path: plugin-dev/sentry-native
       name: Native SDK
     secrets:
       api-token: ${{ secrets.CI_DEPLOY_KEY }}
