--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -231,6 +231,10 @@ jobs:
         id: run-tests
         run: |
           docker exec -w /workspace/checkout/${{ matrix.app }} unreal bash -c "
+            ls -al '/home/ue4/Library/Logs'  "
+          docker exec -w /workspace/checkout/${{ matrix.app }} unreal bash -c "
+            ls -al '/home/ue4/Library/Logs/Unreal Engine'  "
+          docker exec -w /workspace/checkout/${{ matrix.app }} unreal bash -c "
             ls -al '/home/ue4/Library/Logs/Unreal Engine/LocalBuildLogs'  "
           docker exec -w /workspace/checkout/${{ matrix.app }} unreal /home/ue4/UnrealEngine/Engine/Build/BatchFiles/RunUAT.sh BuildCookRun \
             -project=/workspace/checkout/${{ matrix.app }}/SentryPlayground.uproject \
