--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "modules/sentry-java"]
 path = modules/sentry-java
 url = https://github.com/getsentry/sentry-java.git
+
+[submodule "plugin-dev/sentry-native"]
+path = plugin-dev/sentry-native
+url = https://github.com/getsentry/sentry-native.git
