--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -177,7 +177,7 @@ jobs:
           echo ${{ secrets.DOCKER_TOKEN }} | docker login ghcr.io -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
           # We start the container with the user ID of the parent GH action user to avoid permission issues on volume.
           # For UE 5.4 we have to enable ipv6 to fix container startup issues. See https://github.com/adamrehn/ue4-docker/issues/357
-          uid=$(id -u) # the GH action user ID
+          uid=1000 # the GH action user ID
           gid=1000     # the ue4 group in the docker container
           user='gh'
           set -x
@@ -200,7 +200,7 @@ jobs:
       # docker would implicitly have to copy it to the container and we would run out of space on the GH runner.
       - name: Chown Docker container paths
         run: |
-          uid=$(id -u) # the GH action user ID
+          uid=1000 # the GH action user ID
           docker exec --user root unreal bash -c "
             chown -R $uid /home/ue4/UnrealEngine/Engine/Binaries/ThirdParty/Mono/Linux ;
             chown -R $uid /home/ue4/UnrealEngine/Engine/${{ matrix.unreal == '4.27' && 'Programs/UnrealPak/Saved' || 'Binaries/ThirdParty/DotNet' }} "
@@ -230,12 +230,6 @@ jobs:
       - name: Run tests
         id: run-tests
         run: |
-          docker exec -w /workspace/checkout/${{ matrix.app }} unreal bash -c "
-            ls -al '/home/ue4/Library/Logs'  "
-          docker exec -w /workspace/checkout/${{ matrix.app }} unreal bash -c "
-            ls -al '/home/ue4/Library/Logs/Unreal Engine'  "
-          docker exec -w /workspace/checkout/${{ matrix.app }} unreal bash -c "
-            ls -al '/home/ue4/Library/Logs/Unreal Engine/LocalBuildLogs'  "
           docker exec -w /workspace/checkout/${{ matrix.app }} unreal /home/ue4/UnrealEngine/Engine/Build/BatchFiles/RunUAT.sh BuildCookRun \
             -project=/workspace/checkout/${{ matrix.app }}/SentryPlayground.uproject \
             -archivedirectory=/workspace/checkout/${{ matrix.app }}/Builds \
