--- a/.github/workflows/ue-docker.yml
+++ b/.github/workflows/ue-docker.yml
@@ -14,12 +14,9 @@ jobs:
 
       - name: Install unreal-docker
         run: |
-          Invoke-WebRequest -Uri "https://github.com/adamrehn/ue4-docker/archive/refs/heads/master.zip" -OutFile "ue-docker.zip"
-          Expand-Archive -Path "ue-docker.zip" -DestinationPath "."
-          cd ue4-docker-master
-          pip install -e .
+          pip install ue4-docker
 
       - name: Build Unreal Engine Docker image
         run: |
           ue4-docker setup
-          ue4-docker build -basetag ltsc2019 --visual-studio 2019 --target minimal --exclude debug --exclude templates -username=${{ secrets.DOCKER_USERNAME }} -password=${{ secrets.DOCKER_TOKEN }} 4.27.0
+          ue4-docker build -basetag ltsc2019 --visual-studio 2019 --target minimal --exclude debug --exclude templates -isolation=process -username=${{ secrets.DOCKER_USERNAME }} -password=${{ secrets.DOCKER_TOKEN }} 4.27.0
