--- a/.github/workflows/sdk-build.yml
+++ b/.github/workflows/sdk-build.yml
@@ -28,6 +28,7 @@ jobs:
           apt-get -y install sudo
           apt-get -y install wget
           apt-get -y install cmake
+          apt-get -y install libcurl4-openssl-dev
           apt-get -y install software-properties-common
           apt-get -y install git
           git config --global --add safe.directory $(pwd)
