Try a diffrent way of getting cmake

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -217,10 +217,10 @@ jobs:
           apt-get update ;
           add-apt-repository ppa:ubuntu-toolchain-r/test ;
           apt-get install -y wget
-          wget https://cmake.org/files/v3.12/cmake-3.12.0-Linux-x86_64.tar.gz
-          tar zxvf cmake-3.12.0-Linux-x86_64.tar.gz
-          mv cmake-3.12.0-Linux-x86_64 /opt/cmake-3.12.0
-          ln -sf /opt/cmake-3.12.0/bin/* /usr/bin/
+          wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | sudo tee /usr/share/keyrings/kitware-archive-keyring.gpg >/dev/null
+          echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ noble main' | sudo tee /etc/apt/sources.list.d/kitware.list >/dev/null
+          sudo apt update ;
+          sudo apt install -y cmake
           apt-get install -y libstdc++6 libcurl4-openssl-dev'
 
       - name: Download package
