--- a/.github/workflows/sdk-build.yml
+++ b/.github/workflows/sdk-build.yml
@@ -27,10 +27,11 @@ jobs:
           apt-get update
           apt-get -y install sudo
           apt-get -y install wget
-          wget https://cmake.org/files/v3.12/cmake-3.12.0-Linux-x86_64.tar.gz
-          tar zxvf cmake-3.12.0-Linux-x86_64.tar.gz
-          sudo mv cmake-3.12.0-Linux-x86_64 /opt/cmake-3.12.0
-          sudo ln -sf /opt/cmake-3.12.0/bin/* /usr/bin/
+          apt-get -y install tree
+          wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | sudo tee /usr/share/keyrings/kitware-archive-keyring.gpg >/dev/null
+          echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ noble main' | sudo tee /etc/apt/sources.list.d/kitware.list >/dev/null
+          sudo apt update ;
+          sudo apt install -y cmake
           apt-get -y install libcurl4-openssl-dev
           apt-get -y install software-properties-common
           apt-get -y install git
